ASG/wp_sec_group.tf
resource "aws_security_group" "web_sec_group" {
  name        = "web_sec_group"
  description = "Allow TLS inbound traffic"
  vpc_id      = module.project-vpc.id

  ingress {
    description      = "TLS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = [module.project-vpc.id.cidr_block]
  }

  ingress {
    description      = "TLS from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = [module.project-vpc.id.cidr_block]
  }
ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [module.project-vpc.id.cidr_block]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "wp_sec_gr"
    Team = "ProTeam"
    Env  = "Dev"
  }
}
